# WanderingMindDetector

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_REDESIGN.md  CONTRIBUTING.md  Cursey_Demo.ipynb  DOCKER_README.md  Dockerfile  EXPERT_CODE_REVIEW.md  FINAL_STATUS.md  FOLDER_CLEANUP_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UI_ENHANCEMENTS_COMPLETE.md  UI_MODERN_UPDATE.md  clean_app.py  docker-compose.yml  docker_setup.sh  optimized_app.py  pyproject.toml  requirements.txt  setup.py  setup_github.py  simple_app.py
.github/workflows/: ci.yml
cursey/: __init__.py
cursey/detectors/: __init__.py  detectron_detector.py  enhanced_detector.py  eye_detector.py  gaze_analyzer.py  high_performance_detector.py  yolo_face_detector.py
cursey/ui/: __init__.py  enhanced_ui.py  minimal_ui.py  neumorphism_ui.py
cursey/utils/: __init__.py  constants.py  detection_comparison.py
docs/: README.md
examples/: detectron_main_app.py  install_detectron2.py  main_app.py  wmdetector_app.py
src/: __init__.py
src/metrics/: __init__.py  accuracy.py
tests/: test_cursey.py  test_eye_detector.py
