[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursey"
version = "2.0.0"
description = "Multi-Person Face & Eye Tracking System with Detectron2"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cursey Development Team", email = "cursey@example.com"}
]
maintainers = [
    {name = "Cursey Development Team", email = "cursey@example.com"}
]
keywords = [
    "computer vision",
    "face detection",
    "eye tracking", 
    "detectron2",
    "pose estimation",
    "gaze tracking",
    "multi-person tracking",
    "real-time",
    "opencv",
    "pytorch"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "numpy>=1.24.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "detectron2>=0.6",
    "fvcore>=0.1.5",
    "iopath>=0.1.7",
    "pycocotools>=2.0.2",
    "matplotlib>=3.5.0",
    "pillow>=8.3.0",
    "pytest>=7.0.0",
    "jupyter>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.scripts]
cursey = "examples.detectron_main_app:main"
cursey-legacy = "examples.main_app:main"

[project.urls]
Homepage = "https://github.com/cursey-team/cursey"
Documentation = "https://github.com/cursey-team/cursey/blob/main/README.md"
Repository = "https://github.com/cursey-team/cursey"
Issues = "https://github.com/cursey-team/cursey/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cursey*"]

[tool.setuptools.package-data]
cursey = ["models/*.xml", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
